added condition to save BillingAccount with customerId and other details